@@ -1,7 +1,7 @@
 # Input/Output configuration
 # --------------------------
-rootclass=wcet.LoopBoundTest
-dataflow-analysis=yes
+rootclass=wcet.SimpleLoop3
+dataflow-analysis=no
 
 # java classpath (parent directory for looking up class files)
 
@@ -33,8 +33,8 @@ reportdir-parent=java/target/wcet/
 # Analysis options
 # ---------------
 
-# Cache strategy (currently one of of always-miss,static-reachable or always-hit(unsafe))
-cache-approx=static-reachable
+# Cache strategy
+cache-approx=ANALYSE_REACHABLE
 
 # Number of cache blocks
 cache-blocks=16
